--- a/gmail_UX_improvements/styles.css
+++ b/gmail_UX_improvements/styles.css
@@ -1,20 +1,227 @@
 /** CSS Rules to improve the Gmail user experience by offering customizable tools to improve one's ability to visually scan their inbox, organize priorities, and find what they're looking for. **/
 
+/*****************************************************************************/
+/*Many of the below features will be customizable in the future, for example:
+    * Colors for each label (color wheel select)
+    * Which infrequently used icons/tabs are removed from the UI
+    * Which infrequently used/auxiliary icons/tabs are faded out/how strongly they are faded out
+    * How to distinguish keyword matches from other words in an email when using the global search feature (highlight, underline, etc)
+    * Many more
 
-/** To fade out any email already replied to**/
+To learn how to use it, see the README.md page. Currently, you must manually type in the name of your gmail label (e.g. where "Label1" and "Label2" are listed in this css sheet. Soon this will be done through a user interface.*/
+/*****************************************************************************/
 
-div table tbody tr:has(div.at[title="Replied"]) {
-    /*Fades out any email replied to already, if using a "Replied" label method.Requires a filter rule that applies user-created "Replied" label to emails, usually done by using the filter "From:me". Note that using this method with conversation view enabled will not clear the gray-ing out of a conversation after your reply is replied to, and it is recommended to disable conversation view and use the below method instead. */
-    filter: opacity(70%)
+
+
+/*****************************************************************************/
+/*********     GENERAL UI IMPROVEMENTS FOR INBOX          ********************/
+/*****************************************************************************/
+
+.WA.xY {
+    /*To remove the importance marker*/
+    display: none;
 }
+
+/*Turn attachment icons to grayscale*/
+.brf{
+    filter:grayscale(100);
+}
+
+/* Starred to gray*/
+td.apU > .T-KT.T-KT-Jp::before {
+    filter: brightness(10%);
+}
+
+/*********     Visually distinguishing emails already replied to *************/
 
 div table tbody tr:has(div.ay.aA) {
-    /*Fades out any email replied to already using the "arrow" symbol gmail natively adds when conversation view is disabled. Requires conversation view to be disabled.*/
-    filter: opacity(70%);
+    /*Fades out any email replied to already. Requires conversation view to be disabled. Selects based on the "arrow" symbol gmail natively adds*/
+    filter: opacity(50%);
+    /* padding-left: 2vw; optional */
+}
+
+div table tbody tr:has(div.ay.aA) td.yX.xY{
+    /*Indents the sender/subject line of emails replies to already. Requires conversation view to be disabled. Selects based on the "arrow" symbol gmail natively adds*/
+    padding-left:1.5vw;
+}
+
+/*********************     REMOVING ICONS    *********************************/
+/*****************************************************************************/
+
+/*********************      Top Toolbar      *********************************/
+
+/*Menu Bar*/
+.gb_Kc{
+    filter: opacity(50%);
+}
+
+.gb_Kc:hover{
+    filter: opacity(100%);
+}
+
+/*Gmail icon/Home button*/
+img.gb_Od{
+    /*To remove the google gmail icon in the top left*/
+    display: none !important;
+    /* filter: opacity(25%); Optional to fade out instead of remove */
+}
+
+/* '?' icon/help button*/
+[data-tooltip="Support"]{
+    /*To remove the "help" icon in the top right*/
+    display: none;
+    /* filter: opacity(25%); Optional to fade out instead of remove */
+}
+
+/* Try Gemini button*/
+[jscontroller="xdV2Hc"] {
+    /*To remove the "try gemini" icon in the top right*/
+    display: none;
+    /* filter: opacity(25%); Optional to fade out instead of remove */
+}
+
+/* Google apps launcher*/
+.gb_3c{
+    /*To remove just the google apps launcher*/
+    display:none;
+    /* filter: opacity(25%); Optional to fade out instead of remove */
+}
+
+/*----Settings cog icon */
+
+[data-tooltip="Settings"]{
+    /*Fade out settings cog to reduce visual clutter*/
+    /*display: none;  IF you really want to remove the settings cog, but this is not recommended || @follow-up provide a disclaimer checkbox for this*/
+    filter: opacity(50%);
+}
+[data-tooltip="Settings"]:hover {
+    /*Undo fade when hovering over*/
+    filter: opacity(100%);
+}
+
+/*----Google profile icon **/
+.gb_z{
+    /*To remove/fade out just the google profile icon in the top right corner*/
+    /*display: none; If you want to remove the google profile. Not recommended, as you will not be able to switch between gmail profiles @follow-up provide disclaimer checkbox for this*/
+    filter: opacity(50%); 
+}
+
+.gb_z:hover {
+    /*Undo fade when hovering over*/
+    filter: opacity(100%);
+    
+}
+
+/********     Coloring emails according to their label    ********************/
+/*****************************************************************************/
+
+/******************** Coloring the email itself
+/**Label1**/
+div table tbody tr:has(div.at[title="Label1"]) {
+    /* Turns entire row for the email matching the label to a different color, inverts text color */
+    background-color: rgba(158,149,218,0.8);
+    border-style: solid;
+    border-radius: 8px;
+    border-color: white;
+}
+
+/*? Here I remove the optional byline and preview text color inversion and the conversation thread count number text color inversion and "time of arrival" inversion*/
+
+/**Label2**/
+div table tbody tr:has(div.at[title="Label2"]) {
+    /* Turns entire row for the email matching the label to a different color, inverts text color */
+    background-color: rgba(505, 241, 118,0.2);
+    border-style: solid;
+    border-color: white;
+    border-radius: 8px;
+}
+
+/*? Here I remove the optional byline and preview text color inversion and the conversation thread count number text color inversion and "time of arrival" inversion*/
+
+
+
+/***************** Removing the native gmail label tags in favor of highlight */
+div.at{
+    /*To hide the gmail native labels applied to emails in favor of using highlight color to distinguish*/
+    display: none;
+}
+
+tr:hover:has(div.at) div.at{
+    /*To show the gmail native label title on the email when you hover over it*/
+    display: inline;
+    font-weight: bold;
+}
+
+/******************** Coloring the label icon on the labels pane
+/*If you want the small UI icon indicating the label button to be the same color*/
+[data-tooltip="Label1"] div.qj.aEe.qr{
+    /*Turn the |> button next to the label title on the sidebar to the same color that the emails with that label are highlighted as*/
+    background-color:rgba(158,149,218,1);
+}
+
+[data-tooltip="Label2"] div.qj.aEe.qr{
+    /*Turn the |> button next to the label title on the sidebar to the same color that the emails with that label are highlighted as*/
+    background-color: rgba(505, 241, 118,1);
 }
 
 
-/** To replace visually overwhelming search result highlight feature with a more readable option **/
+
+/*****************************************************************************/
+/***************         SIDEBAR UI IMPROVEMENTS    **************************/
+/*****************************************************************************/
+
+
+/* Removing the color background for "Compose" button*/
+.T-I.T-I-KE.L3 {
+    background-color: unset !important;
+    /* filter: opacity(50%); */
+}
+.T-I.T-I-KE.L3:hover {
+    /* filter: opacity(100%); */
+    background-color: #c2e7ff;
+}
+
+/*********************   Removing Side Tabs  *********************************/
+
+/*Drafts*/
+.TN.bzz.aHS-bnq {
+    /*To remove the "drafts" tab option*/
+    display: none;
+}
+/*Snoozed*/
+.TN.bzz.aHS-bu1 {
+    /*To remove the "Snoozed" tab option */
+    display: none;
+}
+/*Add new label "+" icon (collapsed mode)*/
+.bhZ:not(.bym) .aAu.arN {
+    /*To remove the "add new label" + icon when in collapsed sidebar mode only*/
+    display: none;
+}
+
+/***********   Adding # Unread Indicator (collapsed view)    *****************/
+.bsU{
+    /*To make the numbers indicating how many unread emails there are BOLD*/
+    font-weight: bold;
+}
+
+.bhZ:not(.bym):not(.bjB) .bsU{
+    /* To change the red dot indicating unread emails to a number indicating the number of unread*/
+    background-color: white; /*@follow-up re: night mode and dark label colors*/
+    font-size: 10px;
+    line-height: 2px;
+    top: 2px;
+    right:-8px; /*@follow-up change px to responsive */
+}
+
+
+/*****************************************************************************/
+/*********     GENERAL UI IMPROVEMENTS FOR SEARCH         ********************/
+/*****************************************************************************/
+
+
+
+/*********     Clearing up visual clutter of search term matches  *************/
 
 .il {
     /*Replaces annoying highlight with a thick underline. Can add option to change color, etc*/
@@ -23,44 +230,3 @@ div table tbody tr:has(div.ay.aA) {
     text-decoration-thickness: 3px;
 }
 
-/* @follow-up offer more options: underline colors, overline, highlight but more transparent/different color, etc */
-
-
-
-/** To highlight the full row of an email labelled with a user-created label according to a user-defined color scheme **/ 
-    /* @follow-up Test for night-mode extension compatibility, effect of flat 5px at different viewports, mobile, etc. In future, allow user-defined color schemes (background color + inverted color) and automatically detect contrast/visibility issues using some tool like https://webaim.org/resources/contrastchecker/ */
-
-    /**IMPORTANT: Replace "label" with whatever label you wish to color, and likewise with the background color. For now, to apply highlights for more than one label you will have to copy and paste the below rules and replacing the "label" with the other label.**/
-div table tbody tr:has(div.at[title="label"]) {
-    /* Turns entire row for the email matching the label to a different color, inverts text color */
-    background-color: #9E95DA;
-    border-style: solid;
-    border-radius: 5px;
-    color: white;
-
-}
-
-div table tbody tr:has(div.at[title="label"]) td div.brd div.brc {
-    /*To invert color of text of attachment titles as well */
-    color: rgba(255, 255, 255, 0.5) !important;
-}
-
-div table tbody tr:has(div.at[title="label"]) td.yX.xY div.yW span.bx0 {
-    /*To invert color of text of conversation thread email count number. Only works if conversation view is enabled.*/
-    color: rgba(255, 255, 255, 0.5) !important;
-    /*@follow-up Add option in future to customize this feature to fit the view/accessibility desires of the user
-    Some possible options: */
-        /*color: white !important;*/
-    font-weight: bold !important; /* Optional */
-}
-
-div table tbody tr:has(div.at[title="label"]) td span.y2 {
-    /*To invert the color (and make grayed out) the short preview text that comes after an email's title*/
-    color: rgba(255, 255, 255, 0.8)
-}
-
-div table tbody tr:has(div.at[title="label"]) td.xY > span > span {
-    /*To invert the color of the time of arrival of emails that arrived today.
-    The other rules cover previous days, but not the current day.*/
-    color: white;
-}
